--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,15 @@
   </properties>
 
   <dependencies>
-    <dependency>
+      <!--mysql驱动包-->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>6.0.6</version>
+      </dependency>
+
+
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
